# agents

./: .gitignore
agent-prototype/: .env.example  README.md  main.py  pyproject.toml  run_demo.py  test_mcp.py
agent-prototype/src/agent_prototype/: __init__.py
agent-prototype/src/agent_prototype/agent/: __init__.py  claude_agent.py
agent-prototype/src/agent_prototype/mcp_server/: server.py
agent-prototype/src/agent_prototype/tools/: __init__.py  placeholder_tools.py
